Fixed font-spacing for Firefox
See:
http://basicuse.net/articles/pl/textile/html_css/css_hacks_for_mozilla_firefox_opera_safari_and_internet_explorer;

http://stackoverflow.com/questions/11878088/firefox-not-recognizing-a-font

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,13 @@ body {
     background-color: #fff;
 }
 
+/* Firefox */
+@-moz-document url-prefix() {
+  body { 
+    font-stretch: condensed;    }
+}
+
+
 h1,
 h2,
 h3,
